<resources>
    <string name="app_name">MessageCat</string>
    <string name="loadingScreenText">Connecting...</string>
    <string name="welcomeText">Welcome to MessageCat!</string>
    <string name="displayNameInfo">This is the name that will be displayed to others</string>
    <string name="pleaseAllowPermissions">When prompted, please grant the required permissions, these are used to create your account.</string>
    <string name="createNewUser">Create new user</string>
    <string name="displayName">Display name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="title_activity_chats">ChatsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="noChatsMessage">You are not a member of any chats... yet!</string>
    <string name="title_activity_app_bar">AppBarActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_button">Search for a user</string>
    <string name="add_friend_button">Add friend</string>
    <string name="no_search_results_message">No results!</string>
    <string name="no_search_performed_message">Search for a name!</string>
    <string name="no_friends_message">You have no friends... yet!</string>
    <string name="select_a_chat_to_invite_to">Select a chat to invite this user to, or create a new one!</string>
    <string name="chat_name">Chat name</string>
    <string name="chat_desc">Chat description</string>
    <string name="you_cant_change_this_later">You won\'t be able to change this later!</string>
    <string name="create_new_chat">Create new chat</string>
    <string name="invitationAccept">Accept invitation</string>
    <string name="invitationDecline">Decline invitation</string>
    <string name="no_invitations_message">You have no invites... yet!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter message</string>
    <string name="send_message">Send</string>
    <string name="passwordEntry">Password</string>
    <string name="passwordRetype">Re-type your password</string>
    <string name="MessageBoxContentDescription">Scrollable container for messages in this chat.</string>
</resources>